data/derived/comb/progs/unify/prog1684.ml.out
Characters 29-34:
  let _ = List.fold_right (+) [1,2,3] 0;;
                               ^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type int
